[gd_scene load_steps=10 format=3 uid="uid://bqbc6aoyk8nli"]

[ext_resource type="Script" path="res://MainMenu/CharacterList.gd" id="1_3l8e2"]
[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_5lx6f"]
[ext_resource type="FontFile" uid="uid://ceodpvgjntrsf" path="res://Asset/6. Font/DOSGothic.ttf" id="1_g000n"]
[ext_resource type="Texture2D" uid="uid://v0w2ndowp2fq" path="res://Asset/1. Title Image/title.png" id="1_oyyj4"]
[ext_resource type="AudioStream" uid="uid://dy4jwphep07my" path="res://Asset/5. Audio/button_click.mp3" id="2_chy2u"]
[ext_resource type="PackedScene" uid="uid://b8d6pkadcpl4u" path="res://Player/CharacterSlot.tscn" id="2_o5nn3"]
[ext_resource type="Script" path="res://MainMenu/Button.gd" id="2_sybxb"]

[sub_resource type="LabelSettings" id="LabelSettings_kkeig"]
font = ExtResource("1_g000n")
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3ky41"]
font = ExtResource("1_g000n")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lx6f")
click_sound = ExtResource("2_chy2u")

[node name="Panel_TitleScreen" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1024, 768)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel_TitleScreen"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 768.0
texture = ExtResource("1_oyyj4")
expand_mode = 1
stretch_mode = 5

[node name="Panel_CharacterSelect" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterList" type="GridContainer" parent="Panel_CharacterSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 64.0
offset_bottom = 64.0
grow_horizontal = 2
columns = 4
script = ExtResource("1_3l8e2")
character_slot = ExtResource("2_o5nn3")

[node name="Panel_StartingWeapon" type="Panel" parent="Panel_CharacterSelect"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 64.0
offset_right = -192.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartingWeapon" type="TextureRect" parent="Panel_CharacterSelect/Panel_StartingWeapon"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
expand_mode = 1
stretch_mode = 5

[node name="Label_CharacterTitle" type="Label" parent="Panel_CharacterSelect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 128.0
offset_right = -128.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
text = "Name"
label_settings = SubResource("LabelSettings_kkeig")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_CharacterDescription" type="Label" parent="Panel_CharacterSelect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose Character!"
label_settings = SubResource("LabelSettings_3ky41")
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Panel_CharacterSelect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 451.0
offset_top = 640.0
offset_right = 579.0
offset_bottom = 704.0
theme_override_fonts/font = ExtResource("1_g000n")
theme_override_font_sizes/font_size = 48
text = "START"
script = ExtResource("2_sybxb")

[connection signal="gui_input" from="Panel_TitleScreen" to="." method="_on_panel_title_screen_gui_input"]
[connection signal="pressed" from="Panel_CharacterSelect/Button" to="Panel_CharacterSelect/Button" method="_on_pressed"]
